--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <strong>
     <lu><a href="#profile">About Me</a></lu>
       <lu><a href="#skills">Skills</a></lu>
-        <lu><a href="#">Certificates</a></lu>
-            <lu><a href="#">Contact Me</a></lu>
+        <lu><a href="#certificates">Certificates</a></lu>
+            <lu><a href="#CONTACT">Contact Me</a></lu>
             </strong>
     </li>
   </nav>
@@ -166,7 +166,7 @@ data-aos-duration="2000">
 
 
   <div class="certificates"  data-aos="fade-left"
-  data-aos-duration="2000">
+  data-aos-duration="2000" id="certificates">
   <br>
     <h2 class="certificates_">Certificates</h2>
     <h3>FIRST HONOR CERTIFICATE (YEAR 2020 -FIRST SEMESTER)</h3>
@@ -181,7 +181,7 @@ data-aos-duration="2000">
   </div>
 
   <div class="CONTACT"  data-aos="fade-right"
-  data-aos-duration="2000">
+  data-aos-duration="2000" id="CONTACT">
   <br>
     <h2 class="CONTACT_">Contact Me</h2>
     <table class="Social_media">
