--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ data-aos-duration="2000">
          <a onclick="window.open('https://www.linkedin.com/in/abdulaziz-alghizzi-617a85206/', '_blank')"><img src="icons\linkedin.png" alt="htnl_css_js" class="twitter"> </a>
         </td>
         <td>
-         <a href="mailto:Amutiraso@gmail.com"> <img src="icons\gmail.png" alt="htnl_css_js" class="twitter"> </a>
+         <a href="mailto:Alghizzi.Abdulaziz@gmail.com"> <img src="icons\gmail.png" alt="htnl_css_js" class="twitter"> </a>
         </td>
         <td>
 
@@ -202,7 +202,7 @@ data-aos-duration="2000">
         </td>
       </tr>
       <tr> <Strong>
-        Email: Amutiraso@gmail.com <br />
+        Email: Alghizzi.Abdulaziz@gmail.com <br />
         Phone Number: +966581087199 <br />
         </Strong>
       </tr>
